// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente GifGrid debe de mostrar items cuando se cargan imagenes useFetchgifs  1`] = `
<Fragment>
  <h3
    className=" animate__animated animate__fadeIn"
  >
    Naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="1234"
      key="1234"
      title="cualquier cosa"
      url="http://localhost/cualquiercosa/img.png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el componente GifGrid debe mostrar <GifGrid /> correctamente 1`] = `
<Fragment>
  <h3
    className=" animate__animated animate__fadeIn"
  >
    Naruto
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
